# krae-svn

trunk/: AUTHORS  configure.in.in  krae.kdevelop
trunk/doc/: Makefile.am
trunk/doc/en/: Makefile.am  index.docbook
trunk/doc/en/CVS/: Entries  Repository  Root
trunk/src/: Makefile.am  krae.cpp  krae.desktop  krae.h  krae.lsm  kraeui.rc  main.cpp
trunk/templates/: h
